add missing classes

--- a/02dom/exercises.html
+++ b/02dom/exercises.html
@@ -14,8 +14,8 @@
         <li><a href="create.html" class="menu-item">Create / remove</a></li>
         <li><a href="classes.html" class="menu-item">Style classes </a></li>
         <li><a href="events.html" class="menu-item">Events </a></li>
-        <li><a href="exercises.html">Exercises </a></li>
-        <li><a href="#">DOM </a></li>
+        <li><a href="exercises.html" class="menu-item">Exercises </a></li>
+        <li><a href="#" class="menu-item">DOM </a></li>
       </ul> 
     </div> 
 
