--- a/03jquery/solutions.html
+++ b/03jquery/solutions.html
@@ -64,7 +64,7 @@
       
       // 6
       $('#btn2').click(function() {
-        var vLiline = $("<li></li>").html($('#name2').val());   // Create with jQuery
+        var vLi = $("<li></li>").html($('#name2').val());   // Create with jQuery
         $('#nameList ul').append(vLi);
       });
     });
